# MediaSyncPlayer

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/android/iflyings/mediasyncplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/iflyings/mediasyncplayer/: Constant.java  CrashHandler.java  MainActivity.java  MyApplication.java
app/src/main/res/drawable/: ic_cut_section.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: default_vertex_shader.glsl  effect_fragment_shader.glsl  image_fragment_shader.glsl  mask_fragment_shader.glsl  mask_vertex_shader.glsl  video_fragment_shader.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/android/iflyings/mediasyncplayer/: ExampleUnitTest.java
gl-view/: build.gradle
gl-view/src/main/: AndroidManifest.xml
gl-view/src/main/java/com/android/iflyings/glview/: EglHelper.java  (+8 more)
gradle/wrapper/: gradle-wrapper.properties
native-player/: build.gradle
native-player/src/main/: AndroidManifest.xml
native-player/src/main/cpp/: CMakeLists.txt  list.h  looper.cpp  looper.h  native-codec.cpp  native_codec.h  native_player.cpp
service/: build.gradle
service/src/main/: AndroidManifest.xml
tick-manager/: build.gradle
tick-manager/src/main/: AndroidManifest.xml
tick-manager/src/main/cpp/: CMakeLists.txt  DeltaTickBuffer.cpp  DeltaTickBuffer.h  TickManager.cpp  app_conf.h
video-player/: build.gradle
video-player/src/main/: AndroidManifest.xml
(+83 files in other folders)
